# reasoning-llm-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/: data_prep.py  data_prep_problem_type.py  model_planner.py
agent/tools/: mathematical_calculator.py  reasoning.py  websearch copy.py  websearch_copy.py
data/: openr1_planner_train.sample.json
notebooks/: 1_planner_test.ipynb  lora_generation_candidates.json  planner_test1.ipynb  planner_test_ft.ipynb  prompt_debug.txt  prompt_debug_lora.txt
prompts/: few_shot_examples.json  planner_prompt.txt
scripts/: eval_classifier.py  train_lora_llama_classifier.py  train_lora_planner.py
