[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reasoning-llm-agent"
version = "0.1.0"
description = "An agentic reasoning system for the Saptang Labs ML Challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "transformers",
    "sympy",
    "scikit-learn",
    "jupyter",
    "torch==2.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
