[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reasoning-llm-agent"
version = "0.1.0"
description = "An agentic reasoning system for the Saptang Labs ML Challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "transformers",
    "sympy",
    "scikit-learn",
    "jupyter",
    "torch==2.8.0",
    "wikipedia-api>=0.8.1",
    "ddgs>=9.6.0",
    "sentencepiece>=0.2.1",
    "datasets>=4.1.1",
    "peft>=0.17.1",
    "huggingface-hub>=0.35.3",
    "llama-stack>=0.2.11",
    "protobuf>=6.32.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
